fix align icons in community projects

--- a/src/App.css
+++ b/src/App.css
@@ -365,6 +365,7 @@ button.App-connect-wallet:hover {
   letter-spacing: 0px;
   color: #FFFFFF;
   margin-bottom: 1rem;
+  display: flex;
 }
 
 .App-card-title-small {
